# new_project_bundle

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .nvmrc  .pre-commit-config.yaml  .sops.yaml  .tool-versions  BUNDLES.md  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  FEATURES.md  Gemfile  LICENSE  Makefile  README.md  SHELL_FUNCTIONS.md  bundles.json  composer.json  docker-compose.yml  go.mod  go.sum  mcp-config.json  package-lock.json  package.json  renovate.json  requirements.txt  tsconfig.json
.github/: CODEOWNERS  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  SUPPORT.md  copilot-instructions.md  cspell.json  dependabot.yml  labeler.yml  labels.yml  lighthouserc.json  markdown-link-check-config.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ai-review.yml  cd.yml  ci.yml  codeql.yml  dependency-updates.yml  discussions.yml  docs.yml  greetings.yml  issue-triage.yml  (+10 more)
docs/: ARCHITECTURE.md  BUNDLE_SYSTEM_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  SECURITY_SUMMARY.md  VISUAL_GUIDE.md
examples/: QUICK_START.md  README.md  USE_CASES.md  download-examples.sh  shell-aliases.sh
lib/: bundle-functions.sh  profile-integration.sh  rule-manager.sh  tui-browser.sh
rules/: README.md  index.json
scripts/: download-bundle.sh  install.sh  quick-setup.sh  setup-shell.sh  shell-functions.sh  uninstall.sh
templates/: .gitmodules.example  ADR.md  API.md  RUNBOOK.md  SRS.md  agents.md  ai-context-rules.md  ai-linting-rules.md  features.md  rules.md
(+40 files in other folders)
